style.css
{
    box-sizing: border-box;
}

html, body {
    margin: 0;
    font-family: 'Open Sans', sans-serif;
}

.main-container {
    width: 100vw;
    height: 60vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.login-container {
    
    background-color: #ffffff;
    width: 360px;
    height: 360px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0 25px;
    border-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.input-group {
    display: flex;
    flex-direction: column;
    font-size: 2rem;
    margin: 0;
    margin-bottom: 16px;
    color: #00a2ff;
    font-weight: 900;
}

input {
    display: block;
    width: 340px;
    padding: 1rem;
    border-radius: 6px;
    border: none;
    font-size: 1rem;
}

button {
    width: 100%;
    /* margin-top: 16px; */
    padding: 12px 0px;
    /* margin-bottom: 0; */
    font-size: 1.5rem;
    border-radius: 10px;
    background: #0068e7;
    border: none;
    color: #ffffff;
}

h3 {
    padding: 20px;
    margin-top: 0;
    font-weight: 600;
}


.input-group input {
    border: 1.5px solid rgb(218, 218, 218);
    /* background: #b8b8b8; */
}

.ul-list {
    display: flex;
    gap: 16px;
    padding: 10px 10px;
    list-style-type: none;
    color: #0f83ff;
    
}

.ul-list a {
    text-decoration: none;
    color: #0f83ff;
    font-size: 1rem;
    font-weight: normal;
}

.logo {
    padding: 0 60px;
    object-fit: cover;
}


.logo img {
    object-fit: cover;
    width: 200px;
}

